--- a/resources/EasyFind/ZoneConnections.yaml
+++ b/resources/EasyFind/ZoneConnections.yaml
@@ -272,6 +272,9 @@ FindLocations:
             name: '#Deaen Greyforge'
             keyword: get on
             targetZone: northro
+        -   type: ZoneConnection
+            switch: OBJ_SLEEPERTELEPORT
+            targetZone: sleepertwo
     elddar:
         -   type: ZoneConnection
             switch: OBJ_TELEPORT
