--- a/resources/EasyFind/ZoneConnections.yaml
+++ b/resources/EasyFind/ZoneConnections.yaml
@@ -1474,7 +1474,7 @@ FindLocations:
         -   type: ZoneConnection
             location: [1150.54, 425.00, 80]
             targetZone: Marus Seru
-    steamfontmnts:
+    steamfontmts:
         -   type: ZoneConnection
             location: [-1085, -1080, -15]
             targetZone: argath
