--- a/MQ2EasyFind.vcxproj.filters
+++ b/MQ2EasyFind.vcxproj.filters
@@ -65,4 +65,9 @@
       <Filter>Resource Files\easyfind</Filter>
     </None>
   </ItemGroup>
+  <ItemGroup>
+    <NASM Include="AssemblyFunctions64.asm">
+      <Filter>Source Files</Filter>
+    </NASM>
+  </ItemGroup>
 </Project>
