--- a/MQ2EasyFind.vcxproj
+++ b/MQ2EasyFind.vcxproj
@@ -134,7 +134,10 @@
     <None Include="resources\EasyFind\ZoneConnections.yaml" />
   </ItemGroup>
   <ItemGroup>
-    <NASM Include="AssemblyFunctions64.asm" />
+    <NASM Include="AssemblyFunctions64.asm">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
+    </NASM>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
