Add GuildHallClicky UI and Functionality

--- a/MQ2EasyFind.vcxproj
+++ b/MQ2EasyFind.vcxproj
@@ -131,6 +131,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="README.md" />
+    <None Include="resources\EasyFind\GuildHallClickies.yaml" />
     <None Include="resources\EasyFind\ZoneConnections.yaml" />
   </ItemGroup>
   <ItemGroup>
