--- a/resources/EasyFind/ZoneConnections.yaml
+++ b/resources/EasyFind/ZoneConnections.yaml
@@ -1740,6 +1740,10 @@ FindLocations:
         -   type: ZoneConnection
             switch: 7
             targetZone: kattacastrum
+    thegrey:
+        -   type: ZoneConnection
+            location: [74.49, -14.25, -47.87]
+            targetZone: ssratemple
     thevoida:
         -   type: ZoneConnection
             location: [-181.03, -91.57, 27.76]
