--- a/resources/EasyFind/ZoneConnections.yaml
+++ b/resources/EasyFind/ZoneConnections.yaml
@@ -1578,6 +1578,10 @@ FindLocations:
         -   type: ZoneConnection
             location: [-3129, -1235, -292]
             targetZone: lceanium
+    shadeweaver:
+        -   type: ZoneConnection
+            location: [3687, 351.79, -320.94]
+            targetZone: paludal
     sharvahl:
         -   type: ZoneConnection
             location: [1680, -470, -212.24]
