--- a/resources/EasyFind/ZoneConnections.yaml
+++ b/resources/EasyFind/ZoneConnections.yaml
@@ -1527,6 +1527,11 @@ FindLocations:
         -   type: ZoneConnection
             location: [-86.14, 100, 4.06]
             targetZone: mistythicket
+    rubak:
+        -   type: ZoneConnection
+            switch: OBJ_RUB_DOOR
+            targetZone: sarithcity
+            identifier: 5
     ruja:
         -   type: ZoneConnection
             location: [-119.61, 800.72, -95.09]
@@ -1582,6 +1587,11 @@ FindLocations:
         -   type: ZoneConnection
             location: [281.88, 133.17, 5.06]
             targetZone: mistythicket
+    sarithcity:
+        -   type: ZoneConnection
+            switch: OBJ_RUBAK_DOOR
+            targetZone: rubak
+            identifier: 143
     scarlet:
         -   type: ZoneConnection
             location: [-1092.84, -1947.70, -102.18]
